@@ -1,5 +1,10 @@
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/PersonCard.cs: Fixed up invitations so you can almost accept
+	  them
+
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/GroupWindow.cs: Removed unimplemented groups and added Add
 	  Person functionality
 	* Banter/HIGMessageDialog.cs: Fixed up to have a window title
